samples/_failures_safe/1761043232_cd5db0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdcd8752.c: In function ‘main’:
./samples/SAFE/__tmp_fdcd8752.c:155:16: error: missing terminating " character
  155 |         printf("No valid log entries provided.\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fdcd8752.c:155:9: error: expected expression at end of input
  155 |         printf("No valid log entries provided.\n
      |         ^~~~~~
./samples/SAFE/__tmp_fdcd8752.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdcd8752.c:155:9: error: expected declaration or statement at end of input
